--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
     "react-redux": "^7.2.4",
+    "react-select": "^4.3.1",
     "redux": "^4.1.0"
   }
 }
