--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "i18next": "^20.2.2",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.2.2",
+    "moment": "^2.29.1",
     "polished": "^4.1.1",
     "rc-pagination": "^3.1.6",
     "react": "^17.0.2",
