--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.2.1",
     "react-i18next": "^11.8.15",
     "react-modal-image": "^2.5.0",
+    "react-number-format": "^4.6.0",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
