--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "country-flag-icons": "^1.2.10",
     "framer-motion": "^4.1.3",
     "i18next": "^20.2.2",
     "i18next-browser-languagedetector": "^6.1.0",
