--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "bcrypt": "^5.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "cloudinary": "^1.25.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
