--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
@@ -22,12 +21,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
-    "mongoose-auto-increment": "^5.0.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
-    "react-redux": "^7.2.4",
-    "react-select": "^4.3.1",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "uuid": "^8.3.2"
   }
 }
