--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "homepage": "http://fbangel.api-services.site/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -27,8 +28,11 @@
     "react-modal-image": "^2.5.0",
     "react-number-format": "^4.6.0",
     "react-phone-input-2": "^2.14.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "redux": "^4.1.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2",
