--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "i18next": "^20.3.1",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.2.6",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "polished": "^4.1.3",
     "rc-pagination": "^3.1.6",
