--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "polished": "^4.1.3",
     "rc-pagination": "^3.1.6",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.2.4",
     "react-country-region-selector": "^3.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
